Plugin Name: Events
Author: WPMU DEV

Changelog:
----------------------------------------------------------------------
1.9.7 - 
----------------------------------------------------------------------
- Added: New attribute show_old on the shortcode eab_calendar to allow viewing of past events
- Added: Text on event creation and edit page to inform of the tim format
- Added: 24 hour clock timepicker
- Fixed: E-newsletter activation error. Tables of eneswletter would not be created
- Fixed: Session warning when enewsletter is activated
- Fixed: Prevent multiple clicking of event RSVP buttons after confirmation
- Fixed: Archived Events shortcode
- Fixed: Php notices

----------------------------------------------------------------------
1.9.6 - 2017-09-08
----------------------------------------------------------------------

- Added: Option to show event thumb in archive page
- Added: Option to show event thumb in calendar template - filter added: eab_show_thumb_in_calendar_template
- Added: Widget added for monthly archive navigation
- Added: Filter - eab_rsvp_scheduled_rsvp_reset_cron_times to modify the reset settings cron job times
- Added: No start and end time option in front end editor
- Added: Sorting and pagination for archive of events
- Improved: Events Schema Markup for Google Structured Data Testing Tool
- Updated: Shortcode documentation for network attribute
- Fixed: RSVP Email settings from name and email were not working
- Fixed: RSVP Notification Email settings from name and email were not working
- Fixed: Pagination was not working in eab_shortcode
- Fixed: FB Integration in Events+ doesn't work after authorization
- Fixed: FB authenticate reset was not working
- Fixed: Events+ MarketPress Add-on Breaks Regular Paid Events
- Fixed: Notice on undefined variable post_type when M2 and E+ are active together
- Fixed: Remove meta field of the map from event when map is deleted from venue meta field